<resources>
    <string-array name="abdomen_Muscle" translatable="false">
        <item>Transversus Abdominis, Rectus Abdominis, Internal Oblique, External Oblique Muscles</item>
        <item>Rectus Abdominis, The Internal and External Oblique Muscles</item>
        <item>Rectus Abdominis (your six-pack), External Obliques (your sides), The Hips</item>
        <item>Shoulders, Hamstrings, Core, Triceps, Quads</item>
        <item>Obliques, Rectus Abdominis, Transverse Abdominis, Hip Flexors, Erector Spinae, Scapular Muscles, Latissimus Dorsi</item>
        <item>rectus abdominus,</item>
        <item>Iliopsoas, Rectus Abdominis, Obliques</item>
    </string-array>
    <string-array name="abdomen_workout_name" translatable="false">
        <item>Plank</item>
        <item>Leg Raise</item>
        <item>Bicycle Crunch</item>
        <item>Mountain Climber</item>
        <item>Russian Twists</item>
        <item>Crunches</item>
        <item>Hanging Leg Raise</item>
    </string-array>
    <string-array name="abdomen_video" translatable="false">
        <item>R.raw.plank</item>
        <item>R.raw.lying_leg_raise_workout</item>
        <item>R.raw.bicycle_twisting_workout</item>
        <item>R.raw.mountain_climbers_workout</item>
        <item>R.raw.dumbbell_russian_twist_workout</item>
        <item>R.raw.crunches</item>
        <item>R.raw.hanging_leg_raise</item>
    </string-array>
    <string-array name="abdomen_thumbnail" translatable="false">
        <item>R.drawable.plank</item>
        <item>R.drawable.legraise</item>
        <item>R.drawable.bicyclecrunch</item>
        <item>R.drawable.mountainclimber</item>
        <item>R.drawable.russiantwist</item>
        <item>R.drawable.crunches</item>
        <item>R.drawable.hanginglegraise</item>
    </string-array>
    <string-array name="bicep_muscle" translatable="false">
        <item>Biceps, The Brachialis, Brachioradialis</item>
        <item>Biceps, The Brachialis, Brachioradialis</item>
        <item>Biceps, The Brachialis, Brachioradialis</item>
        <item>Biceps, Brachii</item>
        <item>Biceps, Brachii, Brachialis</item>
        <item>Triceps, Brachialis, Brachioradialis</item>
        <item>The Forearms,</item>
        <item>The Forearms,</item>
    </string-array>
    <string-array name="bicep_workout_name" translatable="false">
        <item>Dumbbell Curl</item>
        <item>Incline Dumbbell Curl</item>
        <item>Hammer Curl</item>
        <item>Cabel Curl</item>
        <item>Barbell Curl</item>
        <item>Concentration Curl</item>
        <item>Palms-up Wrist Curl</item>
        <item>Palms-down Wrist Curl</item>
    </string-array>
    <string-array name="bicep_video" translatable="false">
        <item>R.raw.biceps_curls_with_dumbbells</item>
        <item>R.raw.alternate_incline_dumbbell_curl_workout</item>
        <item>R.raw.dumbbell_crossbody_hammer_curl_workout</item>
        <item>R.raw.cable_biceps_curl_workout</item>
        <item>R.raw.standing_barbell_curl_workout</item>
        <item>R.raw.dumbbell_concentration_curl_workout</item>
        <item>R.raw.dumbbell_reverse_wrist_curl_workout</item>
        <item>R.raw.dumbbell_overbench_wrist_curl_workout</item>
    </string-array>
    <string-array name="bicep_thumbnail" translatable="false">
        <item>R.drawable.dumbellcurls</item>
        <item>R.drawable.inclinedumbbellcurls</item>
        <item>R.drawable.hammercurls</item>
        <item>R.drawable.cabelcurls</item>
        <item>R.drawable.barbellcurls</item>
        <item>R.drawable.concentrationcurls</item>
        <item>R.drawable.palmsupwristcurls</item>
        <item>R.drawable.palmsdownwristcurls</item>
    </string-array>
    <string-array name="cardio_muscle" translatable="false">
        <item>Quadriceps, Hamstrings, The calves, The glutes</item>
        <item>Glutes, Hamstrings, Quads, Chest, Back, Biceps, Triceps, Core</item>
        <item>Glutes, Hamstrings, Quadriceps, Abs, Calves</item>
        <item>Legs, Hips, Buttocks, Abdomen, Arms, Chest, Shoulders</item>
        <item>Calves, Quadriceps, Shoulders</item>
    </string-array>
    <string-array name="cardio_workout_name" translatable="false">
        <item>Run on the treadmill</item>
        <item>Pedal away on an elliptical</item>
        <item>Climb steps on a stair machine</item>
        <item>Burpee</item>
        <item>Jumping Jacks</item>
    </string-array>
    <string-array name="cardio_video" translatable="false">
        <item>R.raw.treadmill</item>
        <item>R.raw.elliptical</item>
        <item>R.raw.stepper</item>
        <item>R.raw.burpee_workout</item>
        <item>R.raw.jumping_jack_workout</item>
    </string-array>
    <string-array name="cardio_thumbnail" translatable="false">
        <item>R.drawable.runontreadmill</item>
        <item>R.drawable.pedalawayonanelliptical</item>
        <item>R.drawable.climbstepsonastairmachine</item>
        <item>R.drawable.burpee</item>
        <item>R.drawable.jumpingjacks</item>
    </string-array>
    <string-array name="leg_muscle" translatable="false">
        <item>Gluteus Maximus-Minimus-Medius (buttocks), Quadriceps (front of the thigh), Hamstrings (back of the thigh), Adductor (groin), Hip flexors, Calves</item>
        <item>Quadriceps, Quads</item>
        <item>Glutes, Hamstrings, Quads, Calves</item>
        <item>The Quadriceps, The Rectus Femoris, The Vastus</item>
        <item>Hamstrings, Gluteals</item>
        <item>Gluteals, Quadriceps, Hamstrings</item>
    </string-array>
    <string-array name="leg_workout_name" translatable="false">
        <item>Squats</item>
        <item>Leg Press</item>
        <item>Hack Squats</item>
        <item>Leg Extension</item>
        <item>Leg Curl</item>
        <item>Lunges</item>
    </string-array>
    <string-array name="leg_video" translatable="false">
        <item>R.raw.barbell_full_squat_workout</item>
        <item>R.raw.leg_press_machine_workout</item>
        <item>R.raw.squats</item>
        <item>R.raw.lever_leg_extension</item>
        <item>R.raw.lying_leg_curl_machine_workout</item>
        <item>R.raw.alternate_front_lunges_dumbbell</item>
    </string-array>
    <string-array name="leg_thumbnail" translatable="false">
        <item>R.drawable.squats</item>
        <item>R.drawable.legpress</item>
        <item>R.drawable.hacksquat</item>
        <item>R.drawable.legextension</item>
        <item>R.drawable.legcurls</item>
        <item>R.drawable.lunges</item>
    </string-array>
    <string-array name="shoulder_muscle" translatable="false">
        <item>Anterior Deltoid,</item>
        <item>Trapezius, Lateral Deltoid, Front Deltoids</item>
        <item>Deltoid, Triceps</item>
        <item>Side Deltoid, Anterior Deltoid</item>
        <item>Pectorals (chest), Deltoids (shoulders), Triceps (arms), Trapezius (upper back)</item>
        <item>Rear Deltoids, Rhomboids, Middle Trapezius</item>
    </string-array>
    <string-array name="shoulder_workout_name" translatable="false">
        <item>Dumbell Front Raise</item>
        <item>Dumbbell lateral Raise</item>
        <item>Seated Military Press</item>
        <item>Cabel Lateral raise</item>
        <item>Overhead Press</item>
        <item>Face Pull</item>
    </string-array>
    <string-array name="shoulder_video" translatable="false">
        <item>R.raw.standing_front_raise_dumbbell_workout</item>
        <item>R.raw.lateral_raises_dumbbell_workout</item>
        <item>R.raw.seated_dumbbell_shoulder_press_workout</item>
        <item>R.raw.lateral_raises_on_cable_workout</item>
        <item>R.raw.barbell_seated_overhead_press_workout</item>
        <item>R.raw.resistance_band_face_pull_workout</item>
    </string-array>
    <string-array name="shoulder_thumbnail" translatable="false">
        <item>R.drawable.dumbbellfrontraise</item>
        <item>R.drawable.dumbbelllateralraise</item>
        <item>R.drawable.seatedmilitaryPress</item>
        <item>R.drawable.cabellateralraise</item>
        <item>R.drawable.overheadpress</item>
        <item>R.drawable.facepull</item>
    </string-array>
    <string-array name="triceps_muscle" translatable="false">
        <item>Triceps,</item>
        <item>Triceps, Chest, Shoulders</item>
        <item>Core, Gluteals, Lower Back Muscles</item>
        <item>Triceps,</item>
    </string-array>
    <string-array name="triceps_workout_name" translatable="false">
        <item>Skull Crusher</item>
        <item>Dip</item>
        <item>Standing Overhead Cabel Triceps Extension</item>
        <item>Cabel Rope Tricep Pushdown</item>
    </string-array>
    <string-array name="triceps_video" translatable="false">
        <item>R.raw.dumbbell_incline_triceps_extension_workout</item>
        <item>R.raw.bench_triceps_dip_straight_legs_workout</item>
        <item>R.raw.cable_overhead_extension_rope_workout</item>
        <item>R.raw.cable_reverse_grip_pushdown_workout</item>
    </string-array>
    <string-array name="triceps_thumbnail" translatable="false">
        <item>R.drawable.skullcrusher</item>
        <item>R.drawable.dip</item>
        <item>R.drawable.standingoverheadcabeltricepsextension</item>
        <item>R.drawable.cabelropetriceppushdown</item>
    </string-array>
    <string-array name="back_muscle" translatable="false">
        <item>Trapezius, Deltoids, Rhomboids, Erectors, Latissimus Dorsi, Gluteals, Hamitems, Calves, Biceps, Core</item>
        <item>Latissimus Dorsi, Biceps, Trapezius, Deltoids, Core</item>
        <item>Latissimus Dorsi, Erectors, Serratus, Rhomboids</item>
        <item>Latissimus Dorsi, Biceps, Rhomboids, Deltoids, Trapezius, Pectoralis Major, Serratus, Teres Major</item>
        <item>Latissimus Dorsi, Rhomboids, Trapezius, Biceps</item>
        <item>Latissimus Dorsi, Biceps, Rear Deltoids, Rhomboids, Trapezius</item>
    </string-array>
    <string-array name="back_workout_name" translatable="false">
        <item>Deadlift</item>
        <item>Single-Arm Dumbbell Row</item>
        <item>Incline Rows</item>
        <item>Pull-ups</item>
        <item>Seated Cabel Row</item>
        <item>Lat Pull-Downs</item>
    </string-array>
    <string name="zero">0</string>
    <string name="setBtn">Set</string>
    <string name="startBtn">Start</string>
    <string name="resetBtn">Reset</string>
    <string name="choose_language_title">Choose Language</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="hindi">Hindi</string>
    <string name="spanish">Spanish</string>
    <string name="get_reminder_title">Select Your Time To Get Reminder</string>
    <string name="start_time">Start Time:</string>
    <string name="end_time">End Time:</string>
    <string name="select_start_time">Select Start Time</string>
    <string name="select_end_time">Select End Time</string>
    <string name="start_reminder">Start Reminder</string>
    <string name="enter_time_interval">Enter Time Interval In Minutes</string>
    <string name="workout_image">Workout Image</string>
    <string name="select_workout_time_reminder">Select workout time reminder</string>
    <string name="select_workout_time">Select Workout Time</string>
    <string name="select_workout_time_label">Select Workout Time</string>
    <string name="workout_time_selected">Workout Time Selected:</string>
    <string name="currently_using_metric">Currently Using: Metric</string>
    <string name="current_using_imperial">Current Using: Imperial</string>
    <string name="measurement_unit">Measurement Unit</string>
    <string name="red">Red</string>
    <string name="text_light_mode">Current Mode: Light Mode</string>
    <string name="text_dark_mode">Current Mode: Dark Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="countdown">Countdown</string>
</resources>