<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.waterReminder.WaterReminderActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/waterReminderToolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:title="Water Reminder"
        app:titleTextColor="@color/white" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waterReminderToolbar"
        app:srcCompat="@drawable/water_reminder" />

    <TextView
        android:id="@+id/txtViewWaterReminderTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/get_reminder_title"
        android:textColor="@color/primary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/txtViewStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/start_time"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnStartTime"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewWaterReminderTime" />

    <TextView
        android:id="@+id/txtViewEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/end_time"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtViewStartTime"
        app:layout_constraintTop_toBottomOf="@+id/txtViewStartTime" />

    <Button
        android:id="@+id/btnStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_start_time"
        app:layout_constraintBottom_toBottomOf="@+id/txtViewStartTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtViewStartTime"
        app:layout_constraintTop_toTopOf="@+id/txtViewStartTime" />

    <Button
        android:id="@+id/btnEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_end_time"
        app:layout_constraintBottom_toBottomOf="@+id/txtViewEndTime"
        app:layout_constraintStart_toStartOf="@+id/btnStartTime"
        app:layout_constraintTop_toTopOf="@+id/txtViewEndTime" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/qtyTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/enter_time_interval"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEndTime">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/timeIntervalInputTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/primary"
            android:inputType="number"
            android:digits="0123456789"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnStartReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/start_reminder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qtyTextLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>